crates/toml_edit/tests/fixtures/invalid/inline-table/trailing-comma.stderr
TOML parse error at line 3, column 18
  |
3 | abc = { abc = 123, }
  |                  ^
Invalid inline table
Expected `}`
